<resources>
    <string name="app_name">AttendanceTaker</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="username">Username</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login_new">Login</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="recover">Recover</string>
    <string name="language">Select Languauge</string>
    <string name="lang">Languauge</string>
    <string name="signin">Signing In</string>
    <string name="recover_msg">Contact to The Control Room</string>
    <string name="errorinvalidlogin">Invalid Username or Password</string>
    <string name="title_activity_user_main">UserMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="admin_name">Admin Name</string>
    <string name="admin_designation">Admin Designation</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="phone_no">Mobile No</string>
    <string name="date_birth_new">Date of Birth</string>
    <string name="blood_group">Blood Group</string>
    <string name="gender">Gender</string>
    <string name="place_of_posting">Place of Posting</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_id">My ID</string>
    <string name="menu_attendance">My Attendance</string>
    <string name="menu_credits">Credits</string>
    <string name="menu_password">Change Password</string>
    <string name="solapur_police">Solapur Police</string>
    <string name="maharashtra">Maharashtra</string>
    <string name="identity">Identity Card</string>
    <string name="nameid">Name: </string>
    <string name="mr_name">Mr.Name</string>
    <string name="id_post">Post: </string>
    <string name="post_id">Your Post</string>
    <string name="id_dob">Date of Birth: </string>
    <string name="date">dob</string>
    <string name="id_blood_grp">Blood Group: </string>
    <string name="bld_grp">Your Blood Group</string>
    <string name="log_out">Log Out</string>
    <string name="my_attendance">My Attendance</string>
    <string name="current_password">Current Password</string>
    <string name="enter_current_password">Enter Your Current Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter A New Password</string>
    <string name="confirm_your_password">Confirm Password</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="change_password_title">Change Password</string>
    <string name="title_activity_officer_main">OfficerMainActivity</string>
    <string name="my_team">My Team</string>
    <string name="mark_attendance">MARK ATTENDANCE</string>
    <string name="displayAttendanceMsgSuccess">Attendance Marked Succefully</string>
    <string name="displayMsgAttendanceError">Attendance Not Marked</string>
    <string name="PermissionMsg">Plese Give The Permission</string>
    <string name="name">Name</string>
    <string name="designation">Designation</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mark">Mark</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="lastName">Last Name</string>
    <string name="middleName">Middle Name</string>
    <string name="firstName">First Name</string>
    <string name="selectbloodGroup">Select Blood Group</string>
    <string name="SelectGender">Select Gender</string>
    <string name="selectDesignation">Select Designation</string>
    <string name="firstNameReq">First Name Required</string>
    <string name="middleNameReq">Middle Name Required</string>
    <string name="lastNameReq">Last Name Required</string>
    <string name="invalidAdhar">Invalid Aadhar Number</string>
    <string name="enterValidNo">Enter Valid Number</string>
    <string name="enterValidNemnukNo">Enter Valid Posting Place</string>
    <string name="PasswordnotMatch">Password Does Not Match</string>
    <string name="RegisteringUser">Registering User</string>
    <string name="registerSuccess">Registration Succesful</string>
    <string name="registerUnsuccess">Registration Unsuccesful</string>
</resources>
