<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".IdFragment">

    <LinearLayout
        android:id="@+id/llScroll"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@drawable/background_linearid_gradient"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/topLinear"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/background_linearid_top_gradient">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/logo_new" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/solapur_police"
                    android:textColor="#FFF"
                    android:textAlignment="center"
                    android:textSize="28dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/maharashtra"
                    android:textColor="#FFF"
                    android:textAlignment="center"
                    android:textSize="28dp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/identity"
            android:textAlignment="center"
            android:textColor="#dd1846"
            android:textSize="25dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginRight="9dp"
                    android:background="#000" />

                <ImageView
                    android:id="@+id/QR_Image"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:background="#000"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nameid"
                        android:textColor="#dd1846"
                        android:textSize="22dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/mr_name"
                        android:textColor="#000"
                        android:textSize="22dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/id_post"
                        android:textColor="#dd1846"
                        android:textSize="22dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/designation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/post_id"
                        android:textColor="#000"
                        android:textSize="22dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/id_dob"
                        android:textColor="#dd1846"
                        android:textSize="22dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/date"
                        android:textColor="#000"
                        android:textSize="22dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/id_blood_grp"
                        android:textColor="#dd1846"
                        android:textSize="22dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bloodgroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/bld_grp"
                        android:textColor="#000"
                        android:textSize="22dp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>