<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/background_gradient" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="170dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_linear_gradient"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="20dp">


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"></View>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_password"
            android:textColor="#8b8888"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_current_password" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"></View>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/new_password"
            android:textColor="#8b8888"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/newpass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_new_password" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"></View>

        <EditText
            android:id="@+id/confirmpass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/confirm_your_password" />

        <Button
            android:id="@+id/changepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rec_gradient"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/change_your_password"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/warningtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text=""
            android:textColor="#b30000"
            android:textSize="15sp" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/p12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:text="@string/change_password_title"
        android:textColor="#FFF"
        android:textSize="30sp" />


</RelativeLayout>