<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/background_gradient1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="170dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_linear_gradient"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_username"
            android:textColor="#8b8888"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etLoginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_username"
            android:drawablePadding="20dp"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/enter_your_password"
            android:textColor="#8b8888"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_password"
            android:drawablePadding="20dp"
            android:hint="*******"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFF"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rec_gradient1"
                android:onClick="onClickLogin"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:text="@string/login_new"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rec_gradient3"
                android:onClick="onClickRegister"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/warningtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text=""
            android:textColor="#b30000"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/forgot_your_password"
                android:textColor="#8b8888"
                android:textSize="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="onRecover"
                android:text="@string/recover"
                android:textColor="#567ffe"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/LayoutImage"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/app_logo_new3" />

    <ImageView
        android:id="@+id/firstAnim"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textColor="#FFF"
        android:textSize="30sp" />
</LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        >
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/vitthal"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btnlang"
        android:onClick="onChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:fontFamily="monospace"
        android:layout_marginRight="5dp"
        android:textSize="12dp"
        android:background="@drawable/transperent_color"
        android:textColor="#fff">
    </Button>


</RelativeLayout>


