<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6289ff">

            <RelativeLayout
                android:id="@+id/imgUser"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <com.siddhesh.attendancetaker.CircularImageView
                    android:id="@+id/img_profile"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/p11"
                    android:layout_margin="9dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/admin_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgUser"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:textAlignment="center"
                android:fontFamily="sans-serif-light"
                android:text="@string/admin_name"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/admin_designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/admin_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="3dp"
                android:text="@string/admin_designation"
                android:textAllCaps="true"
                android:textColor="#FFF"
                android:textSize="14sp"
                android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linlay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rellay1"
        android:orientation="vertical">

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linlay1"
        android:background="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aadhar_number"
                        android:textColor="@color/txt"
                        android:textSize="13sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/adharno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:ems="10"
                        android:hint="@string/aadhar_number"
                        android:inputType="textPersonName"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_no"
                        android:textColor="@color/txt"
                        android:textSize="13sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/mobno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:ems="10"
                        android:hint="@string/phone_no"
                        android:inputType="phone"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_birth_new"
                        android:textColor="@color/txt"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:ems="10"
                        android:hint="@string/date_birth_new"
                        android:inputType="textPersonName"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/blood_group"
                        android:textColor="@color/txt"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bloodgroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:ems="10"
                        android:hint="@string/blood_group"
                        android:inputType="textPersonName"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textColor="@color/txt"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:ems="10"
                        android:hint="@string/gender"
                        android:inputType="textPersonName"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/place_of_posting"
                        android:textColor="@color/txt"
                        android:textSize="13sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/placeofposting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:ems="10"
                        android:hint="@string/place_of_posting"
                        android:inputType="textPersonName"
                        android:textSize="17sp" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>